--- a/po/ca.po
+++ b/po/ca.po
@@ -3,19 +3,19 @@
 # This file is distributed under the same license as the Audacious Plugins package.
 #
 # Translators:
-# Adolfo Jayme-Barrientos, 2013
+# Adolfo Jayme Barrientos, 2013
 # Catalanoic <catalanoic@gmail.com>, 2016
 # Catalanoic <catalanoic@gmail.com>, 2012
 # David Surroca Estrada <david.tb303@gmail.com>, 2015-2016
 # Francesc Gordillo i Cortínez <inactive+frangor@transifex.com>, 2013
-# Robert Antoni Buj Gelonch <rbuj@fedoraproject.org>, 2016
+# Robert Antoni Buj Gelonch <rbuj@fedoraproject.org>, 2016-2017
 msgid ""
 msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2017-07-09 23:42+0200\n"
-"PO-Revision-Date: 2017-06-07 18:53+0000\n"
-"Last-Translator: Thomas Lange\n"
+"POT-Creation-Date: 2017-08-19 19:26+0200\n"
+"PO-Revision-Date: 2017-08-05 20:06+0000\n"
+"Last-Translator: Robert Antoni Buj Gelonch <rbuj@fedoraproject.org>\n"
 "Language-Team: Catalan (http://www.transifex.com/audacious/audacious/"
 "language/ca/)\n"
 "Language: ca\n"
@@ -303,7 +303,7 @@ msgid ""
 "code served as a reference when the ALSA manual was not enough."
 msgstr ""
 "Connector de sortida ALSA per a Audacious\n"
-"Copyright 2009-2012 John Lindgren\n"
+"Drets d'autor 2009-2012 John Lindgren\n"
 "\n"
 "Molts agraïments a William Pitcock, autor del connector de sortida ALSA NG, "
 "el codi va servir de referència quan el manual d'ALSA no era suficient."
@@ -538,6 +538,11 @@ msgid ""
 "Copyright (C) Róbert Čerňanský and John Lindgren\n"
 "License: GNU GPLv3"
 msgstr ""
+"Navegador Ampache per a Audacious\n"
+"http://ampache-browser.org/\n"
+"\n"
+"Drets d'autor (C) Róbert Čerňanský i John Lindgren\n"
+"Llicència: GNU GPLv3"
 
 #: src/aosd/aosd.cc:31
 msgid ""
@@ -629,7 +634,7 @@ msgstr "Amplada màxima de l'OSD:"
 
 #: src/aosd/aosd_ui.cc:220
 msgid "Multi-Monitor options"
-msgstr "Opcions multimonitor"
+msgstr "Opcions diversos monitors"
 
 #: src/aosd/aosd_ui.cc:224
 msgid "Display OSD using:"
@@ -820,7 +825,7 @@ msgid ""
 "\n"
 "This was a Google Summer of Code 2007 project."
 msgstr ""
-"Copyright (C) 2007-2012 Calin Crisan <ccrisan@gmail.com> i altres.\n"
+"Drets d'autor (C) 2007-2012 Calin Crisan <ccrisan@gmail.com> i altres.\n"
 "\n"
 "Moltes gràcies als desenvolupadors de libcdio <http://www.gnu.org/software/"
 "libcdio/>\n"
@@ -925,7 +930,7 @@ msgstr "No s'ha pogut recuperar el primer/últim número de pista."
 #: src/cdaudio/cdaudio-ng.cc:529
 #, c-format
 msgid "Cannot read start/end LSN for track %d."
-msgstr "No s'ha pogut llegir el LSN d'inici/fi per la pista %d."
+msgstr "No es pot llegir el LSN de començament o d'acabament per la pista %d."
 
 #: src/cdaudio/cdaudio-ng.cc:611
 msgid "Failed to create the cddb connection."
@@ -975,11 +980,11 @@ msgid ""
 "Copyright 2010-2014 John Lindgren"
 msgstr ""
 "Connector de compressió d'interval dinàmic per a Audacious\n"
-"Copyright 2010-2014 John Lindgren"
+"Drets d'autor 2010-2014 John Lindgren"
 
 #: src/compressor/compressor.cc:64
 msgid "Dynamic Range Compressor"
-msgstr "Dynamic Range Compressor"
+msgstr "Compressor del rang dinàmic"
 
 #: src/console/plugin.cc:15
 msgid ""
@@ -1050,10 +1055,10 @@ msgid ""
 "Copyright 2010 John Lindgren"
 msgstr ""
 "Connector de sortida CoreAudio per a Audacious\n"
-"Copyright 2014 William Pitcock\n"
+"Drets d'autor 2014 William Pitcock\n"
 "\n"
 "Basat en el connector de sortida SDL per a Audacious\n"
-"Copyright 2010 John Lindgren"
+"Drets d'autor 2010 John Lindgren"
 
 #: src/coreaudio/coreaudio.cc:143
 msgid "Use exclusive mode"
@@ -1065,7 +1070,7 @@ msgid ""
 "Copyright 2010-2014 John Lindgren"
 msgstr ""
 "Connector de fusió entre cançons per a Audacious\n"
-"Copyright 2010-2014 John Lindgren"
+"Drets d'autor 2010-2014 John Lindgren"
 
 #: src/crossfade/crossfade.cc:47
 msgid "<b>Crossfade</b>"
@@ -1177,7 +1182,7 @@ msgid ""
 msgstr ""
 "Connector d'eco\n"
 "Per Johan Levin, 1999\n"
-"Eco envolvent per Carl van Schaik, 1999\n"
+"Eco envoltant per Carl van Schaik, 1999\n"
 "Actualitzat per a Audacious per William Pitcock i John Lindgren, 2010-2014"
 
 #: src/echo_plugin/echo.cc:21
@@ -1219,7 +1224,8 @@ msgid ""
 "William Pitcock <nenolod@nenolod.net>\n"
 "Matti Hämäläinen <ccr@tnsp.org>"
 msgstr ""
-"Connector de descodificació d'àudio multiformat per a Audacious mitjançant\n"
+"Connector de descodificació d'àudio de diversos formats per a Audacious "
+"mitjançant\n"
 "el marc de treball multimèdia de FFmpeg (http://www.ffmpeg.org/)\n"
 "\n"
 "Connector d'Audacious per:\n"
@@ -1480,7 +1486,7 @@ msgstr "<b>Capçaleres dels marcs</b>"
 
 #: src/filewriter/filewriter.cc:533
 msgid "Mark as copyright"
-msgstr "Marca com a copyright"
+msgstr "Marca com a drets d'autor"
 
 #: src/filewriter/filewriter.cc:535
 msgid "Mark as original"
@@ -1549,7 +1555,7 @@ msgid ""
 "Copyright 2009-2012 John Lindgren"
 msgstr ""
 "Connector GIO per a Audacious\n"
-"Copyright 2009-2012 John Lindgren"
+"Drets d'autor 2009-2012 John Lindgren"
 
 #: src/gio/gio.cc:42
 msgid "GIO Plugin"
@@ -1574,8 +1580,8 @@ msgid ""
 "\n"
 "License: GPLv2+"
 msgstr ""
-"OpenGL Spectrum Analyzer per a Audacious\n"
-"Copyright 2013 Christophe Budé, John Lindgren i Carlo Bramini\n"
+"Analitzador d'espectre OpenGL per a Audacious\n"
+"Drets d'autor 2013 Christophe Budé, John Lindgren i Carlo Bramini\n"
 "\n"
 "Basat en el connector de XMMS:\n"
 "Drets d'autor 1998-2000 Peter Alm, Mikael Alm, Olle Hallnas, Thomas Nilsson "
@@ -1601,7 +1607,7 @@ msgstr ""
 "Connector de dreceres de GNOME\n"
 "Permet controlar el reproductor amb les dreceres de GNOME.\n"
 "\n"
-"Copyright (C) 2007-2008 Sascha Hlusiak <contact@saschahlusiak.de>"
+"Drets d'autor (C) 2007-2008 Sascha Hlusiak <contact@saschahlusiak.de>"
 
 #: src/gtkui/columns.cc:35
 msgid "Entry number"
@@ -1627,7 +1633,7 @@ msgstr "Àlbum"
 
 #: src/gtkui/columns.cc:40
 msgid "Album artist"
-msgstr "Arista de l'àlbum"
+msgstr "Artista de l'àlbum"
 
 #: src/gtkui/columns.cc:41 src/qtui/playlist_model.cc:39
 msgid "Track"
@@ -1776,7 +1782,7 @@ msgstr "N_o avancis la llista de reproducció"
 
 #: src/gtkui/menus.cc:102 src/qtui/menus.cc:94
 msgid "Stop A_fter This Song"
-msgstr "Atura d_esprés d'aquesta cançó."
+msgstr "Atura d_esprés d'aquesta cançó"
 
 #: src/gtkui/menus.cc:104 src/gtkui/menus.cc:205 src/qtui/menus.cc:96
 #: src/qtui/menus.cc:198
@@ -1864,7 +1870,7 @@ msgstr "Per títol _personalitzat"
 #: src/gtkui/menus.cc:130 src/gtkui/menus.cc:147 src/qtui/menus.cc:116
 #: src/qtui/menus.cc:133
 msgid "By C_omment"
-msgstr ""
+msgstr "Per c_omentari"
 
 #: src/gtkui/menus.cc:132 src/gtkui/menus.cc:149 src/qtui/menus.cc:118
 #: src/qtui/menus.cc:135
@@ -2268,11 +2274,11 @@ msgstr ""
 "Controla el reproductor amb les combinacions de tecles globals o "
 "multimèdia.\n"
 "\n"
-"Copyright (C) 2007-2008 Sascha Hlusiak <contact@saschahlusiak.de>\n"
+"Drets d'autor (C) 2007-2008 Sascha Hlusiak <contact@saschahlusiak.de>\n"
 "\n"
 "Els contribuïdors s'inclouen:\n"
-"Copyright (C) 2006-2007 Vladimir Paskov <vlado.paskov@gmail.com>\n"
-"Copyright (C) 2000-2002 Ville Syrjälä <syrjala@sci.fi>,\n"
+"Drets d'autor (C) 2006-2007 Vladimir Paskov <vlado.paskov@gmail.com>\n"
+"Drets d'autor (C) 2000-2002 Ville Syrjälä <syrjala@sci.fi>,\n"
 " Bryn Davies <curious@ihug.com.au>,\n"
 " Jonathan A. Davis <davis@jdhouse.org>,\n"
 " Jeremy Tan <nsx@nsx.homeip.net>"
@@ -2361,7 +2367,7 @@ msgid ""
 "Copyright 2011 John Lindgren"
 msgstr ""
 "Amfitrió LADSPA per a Audacious\n"
-"Copyright 2011 John Lindgren"
+"Drets d'autor 2011 John Lindgren"
 
 #: src/ladspa/plugin.h:78
 msgid "LADSPA Host"
@@ -2499,7 +2505,7 @@ msgid ""
 "Channel Mixer Plugin for Audacious\n"
 "Copyright 2011-2012 John Lindgren and Michał Lipski"
 msgstr ""
-"Channel Mixer Plugin per a Audacious\n"
+"Connector de mesclador de canals per a Audacious\n"
 "Drets d'autor 2011-2012 John Lindgren i Michał Lipski"
 
 #: src/mixer/mixer.cc:231
@@ -2520,7 +2526,7 @@ msgstr "Error en connectar al servidor MMS"
 
 #: src/modplug/modplugbmp.h:57
 msgid "ModPlug (Module Player)"
-msgstr "ModPlug (Reproductor mòdul)"
+msgstr "ModPlug (Module Player)"
 
 #: src/modplug/plugin_main.cc:56
 msgid "<b>Resolution</b>"
@@ -2698,7 +2704,7 @@ msgid ""
 "You should have received a copy of the GNU General Public License along with "
 "this program.  If not, see <http://www.gnu.org/licenses/>."
 msgstr ""
-"Desktop Notifications Plugin per a Audacious\n"
+"Connector de notificacions d'escriptori per a Audacious\n"
 "Drets d'autor (C) 2010 Maximilian Bogner\n"
 "Drets d'autor (C) 2011-2013 John Lindgren i Jean-Alexandre Anglès d'Auriac\n"
 "\n"
@@ -2835,7 +2841,7 @@ msgstr ""
 
 #: src/qtaudio/qtaudio.cc:44
 msgid "QtMultimedia Output"
-msgstr "Sortida de QtMultimedia"
+msgstr "Sortida QtMultimedia"
 
 #: src/qtaudio/qtaudio.cc:72
 msgid ""
@@ -2846,10 +2852,10 @@ msgid ""
 "Copyright 2010 John Lindgren"
 msgstr ""
 "Connector de sortida d'àudio QtMultimedia per a Audacious\n"
-"Copyright 2014 William Pitcock\n"
+"Drets d'autor 2014 William Pitcock\n"
 "\n"
 "Basat en el connector de sortida d'àudio SDL per a Audacious\n"
-"Copyright 2010 John Lindgren"
+"Drets d'autor 2010 John Lindgren"
 
 #: src/qtglspectrum/gl-spectrum.cc:41
 msgid ""
@@ -2919,7 +2925,7 @@ msgstr "Ajusts de l'àudio..."
 
 #: src/qtui/playlist_header.cc:201
 msgid "Reset to Defaults"
-msgstr ""
+msgstr "Restableix als valors predeterminats"
 
 #: src/qtui/playlist_model.cc:32
 msgid "Now Playing"
@@ -2927,7 +2933,7 @@ msgstr "En reproducció ara"
 
 #: src/qtui/playlist_model.cc:33
 msgid "Entry Number"
-msgstr ""
+msgstr "Número d'entrada"
 
 #: src/qtui/playlist_model.cc:38
 msgid "Album Artist"
@@ -2935,19 +2941,19 @@ msgstr "Artista de l'àlbum"
 
 #: src/qtui/playlist_model.cc:41
 msgid "Queue Position"
-msgstr ""
+msgstr "Posició a la cua"
 
 #: src/qtui/playlist_model.cc:43
 msgid "File Path"
-msgstr ""
+msgstr "Camí al fitxer"
 
 #: src/qtui/playlist_model.cc:44
 msgid "File Name"
-msgstr ""
+msgstr "Nom del fitxer"
 
 #: src/qtui/playlist_model.cc:45
 msgid "Custom Title"
-msgstr ""
+msgstr "Títol personalitzat"
 
 #: src/qtui/qtui.cc:39
 msgid "Qt Interface"
@@ -2967,7 +2973,7 @@ msgid ""
 "Copyright 2010-2012 John Lindgren"
 msgstr ""
 "Connector de conversió de freqüència de mostreig per a Audacious\n"
-"Copyright 2010-2012 John Lindgren"
+"Drets d'autor 2010-2012 John Lindgren"
 
 #: src/resample/resample.cc:187
 msgid "Skip/repeat samples"
@@ -3072,7 +3078,7 @@ msgstr ""
 
 #: src/scrobbler2/config_window.cc:47
 msgid "There was a problem contacting Last.fm."
-msgstr ""
+msgstr "Hi ha hagut un problema en contactar amb Last.fm."
 
 #: src/scrobbler2/config_window.cc:86
 msgid "Check Permission"
@@ -3123,7 +3129,7 @@ msgid ""
 "Copyright 2010 John Lindgren"
 msgstr ""
 "Connector de sortida SDL per a Audacious\n"
-"Copyright 2010 John Lindgren"
+"Drets d'autor 2010 John Lindgren"
 
 #: src/search-tool-qt/search-tool-qt.cc:208
 #: src/search-tool-qt/search-tool-qt.cc:219 src/search-tool/search-tool.cc:124
@@ -3226,7 +3232,7 @@ msgstr "Velocitat de rellotge:"
 
 #: src/sid/xs_config.cc:78
 msgid "Do not automatically select clock speed"
-msgstr ""
+msgstr "No seleccionis automàticament la velocitat del rellotge"
 
 #: src/sid/xs_config.cc:80
 msgid "<b>Playback time</b>"
@@ -3238,7 +3244,7 @@ msgstr "Estableix el temps màxim de reproducció:"
 
 #: src/sid/xs_config.cc:87
 msgid "Use only when song length is unknown"
-msgstr ""
+msgstr "Utilitza-ho només quan es desconegui la durada de la cançó"
 
 #: src/sid/xs_config.cc:90
 msgid "Set minimum playback time:"
@@ -3254,7 +3260,7 @@ msgstr "Habilita els subtons"
 
 #: src/sid/xs_config.cc:99
 msgid "Ignore subtunes shorter than:"
-msgstr ""
+msgstr "Ignora els subtons més petits que:"
 
 #: src/sid/xs_config.cc:105
 msgid "<b>Note</b>"
@@ -3270,7 +3276,7 @@ msgid ""
 "Copyright 2014 John Lindgren"
 msgstr ""
 "Connector de supressió del silenci per a Audacious\n"
-"Copyright 2014 John Lindgren"
+"Drets d'autor 2014 John Lindgren"
 
 #: src/silence-removal/silence-removal.cc:67
 msgid "<b>Silence Removal</b>"
@@ -3286,15 +3292,15 @@ msgstr "dB"
 
 #: src/skins/actions.cc:45 src/skins-qt/actions.cc:43
 msgid "Repeat points cleared."
-msgstr ""
+msgstr "S'han netejat els punts de repetició."
 
 #: src/skins/actions.cc:60 src/skins-qt/actions.cc:58
 msgid "Repeat point A set."
-msgstr ""
+msgstr "S'ha establert el punt de repetició A."
 
 #: src/skins/actions.cc:65 src/skins-qt/actions.cc:63
 msgid "Repeat point B set."
-msgstr ""
+msgstr "S'ha establert el punt de repetició B."
 
 #: src/skins/equalizer.cc:224 src/skins-qt/equalizer.cc:220
 msgid "Preamp"
@@ -3669,7 +3675,7 @@ msgstr "Per títol personalitzat"
 #: src/skins/menus.cc:204 src/skins/menus.cc:219 src/skins-qt/menus.cc:198
 #: src/skins-qt/menus.cc:213
 msgid "By Comment"
-msgstr ""
+msgstr "Per comentari"
 
 #: src/skins/menus.cc:223 src/skins-qt/menus.cc:217
 msgid "Randomize List"
@@ -3851,7 +3857,7 @@ msgstr "Suau"
 
 #: src/skins-qt/skins_cfg.cc:264 src/skins/skins_cfg.cc:245
 msgid "Coloring:"
-msgstr ""
+msgstr "Acoloriment:"
 
 #: src/skins-qt/skins_cfg.cc:267 src/skins/skins_cfg.cc:248
 msgid "Style:"
@@ -3859,19 +3865,19 @@ msgstr "Estil:"
 
 #: src/skins-qt/skins_cfg.cc:270 src/skins/skins_cfg.cc:251
 msgid "Falloff:"
-msgstr ""
+msgstr "Caiguda:"
 
 #: src/skins-qt/skins_cfg.cc:273 src/skins/skins_cfg.cc:254
 msgid "Peak falloff:"
-msgstr ""
+msgstr "Caiguda dels pics:"
 
 #: src/skins-qt/skins_cfg.cc:279 src/skins/skins_cfg.cc:260
 msgid "Scope Style:"
-msgstr ""
+msgstr "Estil de l'oscil·loscopi:"
 
 #: src/skins-qt/skins_cfg.cc:282 src/skins/skins_cfg.cc:263
 msgid "Voiceprint Coloring:"
-msgstr ""
+msgstr "Acoloriment de l'empremta de veu:"
 
 #: src/skins-qt/skins_cfg.cc:285 src/skins/skins_cfg.cc:266
 msgid "VU Meter Style:"
@@ -3891,7 +3897,7 @@ msgstr "<b>Analitzador</b>"
 
 #: src/skins-qt/skins_cfg.cc:296 src/skins/skins_cfg.cc:277
 msgid "Show peaks"
-msgstr ""
+msgstr "Mostra els pics"
 
 #: src/skins-qt/skins_cfg.cc:305 src/skins/skins_cfg.cc:286
 msgid "Visualization"
@@ -3994,7 +4000,7 @@ msgstr "Desa i restaura el volum:"
 #: src/sndio/sndio.cc:181
 #, c-format
 msgid "Sndio error: Unsupported audio format (%d)"
-msgstr "Error de Sndio: Format d'àudio no compatible (%d)"
+msgstr "Error de sndio: format d'àudio no admès (%d)"
 
 #: src/sndio/sndio.cc:192
 msgid "Sndio error: sio_open() failed"
@@ -4103,7 +4109,7 @@ msgstr ""
 
 #: src/speedpitch/speed-pitch.cc:247
 msgid "<b>Speed</b>"
-msgstr ""
+msgstr "<b>Velocitat</b>"
 
 #: src/speedpitch/speed-pitch.cc:248
 msgid "Decouple from pitch"
@@ -4111,7 +4117,7 @@ msgstr ""
 
 #: src/speedpitch/speed-pitch.cc:250 src/speedpitch/speed-pitch.cc:258
 msgid "Multiplier:"
-msgstr ""
+msgstr "Multiplicador:"
 
 #: src/speedpitch/speed-pitch.cc:254
 msgid "<b>Pitch</b>"
@@ -4153,8 +4159,8 @@ msgid ""
 msgstr ""
 "Connector d'icona d'estat\n"
 "\n"
-"Copyright 2005-2007 Giacomo Lozito <james@develia.org>\n"
-"Copyright 2010 Michał Lipski <tallica@o2.pl>\n"
+"Drets d'autor 2005-2007 Giacomo Lozito <james@develia.org>\n"
+"Drets d'autor 2010 Michał Lipski <tallica@o2.pl>\n"
 "\n"
 "Aquest connector proporciona una icona d'estat, ubicada\n"
 "a la safata de sistema del gestor de finestres."
@@ -4222,7 +4228,7 @@ msgid ""
 "To use it, add a URL: tone://frequency1;frequency2;frequency3;...\n"
 "e.g. tone://2000;2005 to play a 2000 Hz tone and a 2005 Hz tone"
 msgstr ""
-"Generador de tons sinusoïdals per Haavard Kvaalen <havardk@xmms.org>\n"
+"Generador de tons sinusoidals per Haavard Kvaalen <havardk@xmms.org>\n"
 "Modificat per Daniel J. Peng <danielpeng@bigfoot.com>\n"
 "\n"
 "Per a utilitzar-ho, afegiu un URL: tone://feqüència1;feqüència2;"
@@ -4328,7 +4334,7 @@ msgid ""
 "Copyright 2016 John Lindgren"
 msgstr ""
 "Connector Win32 waveOut per a Audacious\n"
-"Copyright 2016 John Lindgren"
+"Drets d'autor 2016 John Lindgren"
 
 #: src/wavpack/wavpack.cc:24
 msgid "WavPack Decoder"
@@ -4348,7 +4354,7 @@ msgid ""
 "\n"
 "Some of the plugin code was by Miles Egan."
 msgstr ""
-"Copyright 2006 William Pitcock <nenolod@nenolod.net>\n"
+"Drets d'autor 2006 William Pitcock <nenolod@nenolod.net>\n"
 "\n"
 "Part del codi del connector va ser feta per Miles Egan."
 
@@ -4366,4 +4372,4 @@ msgstr "Ignora la longitud del fitxer"
 
 #: src/xspf/xspf.cc:91
 msgid "XML Shareable Playlists (XSPF)"
-msgstr "XSPF (XML Shareable Playlists)"
+msgstr "XSPF (llistes de reproducció XML que es poden compartir)"
