--- a/po/es.po
+++ b/po/es.po
@@ -5,9 +5,9 @@
 # Translators:
 # Adolfo Jayme Barrientos, 2013
 # Adolfo Jayme Barrientos <fito@libreoffice.org>, 2013-2014
-# Adolfo Jayme-Barrientos, 2013
-# Adolfo Jayme-Barrientos, 2016
-# Adolfo Jayme-Barrientos, 2015
+# Adolfo Jayme Barrientos, 2013
+# Adolfo Jayme Barrientos, 2016
+# Adolfo Jayme Barrientos, 2015
 # Adrián Ramirez Escalante <buried.prophet@gmail.com>, 2012
 # Cosme Domínguez Díaz <cosme.ddiaz@gmail.com>, 2010
 # enjolras <yo@miguelrevilla.com>, 2012
@@ -28,8 +28,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2017-07-09 23:42+0200\n"
-"PO-Revision-Date: 2017-06-07 18:53+0000\n"
+"POT-Creation-Date: 2017-08-19 19:26+0200\n"
+"PO-Revision-Date: 2017-08-03 11:12+0000\n"
 "Last-Translator: Thomas Lange\n"
 "Language-Team: Spanish (http://www.transifex.com/audacious/audacious/"
 "language/es/)\n"
