--- a/po/ru.po
+++ b/po/ru.po
@@ -41,13 +41,14 @@
 # Volk Daemon <volk-daemon@rambler.ru>, 2016
 # Алексей <kvadrocu7@gmail.com>, 2013
 # Денис <alpi_bel@mail.ru>, 2014-2015
+# Денис Локтев <den32ds@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2017-07-09 23:42+0200\n"
-"PO-Revision-Date: 2017-06-07 18:53+0000\n"
-"Last-Translator: Thomas Lange\n"
+"POT-Creation-Date: 2017-08-19 19:26+0200\n"
+"PO-Revision-Date: 2017-08-03 11:12+0000\n"
+"Last-Translator: Денис Локтев <den32ds@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/audacious/audacious/"
 "language/ru/)\n"
 "Language: ru\n"
@@ -60,7 +61,7 @@ msgstr ""
 
 #: src/aac/aac.cc:18
 msgid "AAC (Raw) Decoder"
-msgstr "Декодер AAC(Raw)"
+msgstr "Декодер AAC (Raw)"
 
 #: src/adplug/adplug-xmms.cc:42
 msgid "AdPlug (AdLib Player)"
@@ -575,6 +576,11 @@ msgid ""
 "Copyright (C) Róbert Čerňanský and John Lindgren\n"
 "License: GNU GPLv3"
 msgstr ""
+"Ampache Browser для Audacious\n"
+"http://ampache-browser.org/\n"
+"\n"
+"Copyright (C) Róbert Čerňanský and John Lindgren\n"
+"Лицензия: GNU GPLv3"
 
 #: src/aosd/aosd.cc:31
 msgid ""
@@ -1905,7 +1911,7 @@ msgstr "По _заданному названию файла"
 #: src/gtkui/menus.cc:130 src/gtkui/menus.cc:147 src/qtui/menus.cc:116
 #: src/qtui/menus.cc:133
 msgid "By C_omment"
-msgstr ""
+msgstr "По к_омментарию"
 
 #: src/gtkui/menus.cc:132 src/gtkui/menus.cc:149 src/qtui/menus.cc:118
 #: src/qtui/menus.cc:135
@@ -2651,7 +2657,7 @@ msgstr "Шумоподавление"
 
 #: src/modplug/plugin_main.cc:112
 msgid "Play Amiga MODs"
-msgstr "Воспроизвести модификацию Amiga"
+msgstr "Воспроизвести модульные файлы Amiga"
 
 #: src/modplug/plugin_main.cc:113
 msgid "<b>Repeat</b>"
@@ -2976,7 +2982,7 @@ msgstr "_Инспектор журнала ..."
 
 #: src/qtui/menus.cc:143
 msgid "_Find ..."
-msgstr ""
+msgstr "_Найти ..."
 
 #: src/qtui/menus.cc:169 src/skins/menus.cc:80 src/skins-qt/menus.cc:68
 msgid "Audio Settings ..."
@@ -2984,7 +2990,7 @@ msgstr "Настройки аудио ..."
 
 #: src/qtui/playlist_header.cc:201
 msgid "Reset to Defaults"
-msgstr ""
+msgstr "Сбросить по умолчанию"
 
 #: src/qtui/playlist_model.cc:32
 msgid "Now Playing"
@@ -3000,15 +3006,15 @@ msgstr "Исполнитель альбома"
 
 #: src/qtui/playlist_model.cc:41
 msgid "Queue Position"
-msgstr ""
+msgstr "Позиция в очереди"
 
 #: src/qtui/playlist_model.cc:43
 msgid "File Path"
-msgstr ""
+msgstr "Путь файла"
 
 #: src/qtui/playlist_model.cc:44
 msgid "File Name"
-msgstr ""
+msgstr "Имя файла"
 
 #: src/qtui/playlist_model.cc:45
 msgid "Custom Title"
@@ -3020,7 +3026,7 @@ msgstr "Интерфейс Qt"
 
 #: src/qtui/search_bar.cc:47
 msgid "Search playlist"
-msgstr ""
+msgstr "Найти список воспроизведения"
 
 #: src/resample/resample.cc:43
 msgid "Sample Rate Converter"
@@ -4229,7 +4235,7 @@ msgstr "Скорость и высота"
 
 #: src/speedpitch/speed-pitch.cc:247
 msgid "<b>Speed</b>"
-msgstr ""
+msgstr "<b>Скорость</b>"
 
 #: src/speedpitch/speed-pitch.cc:248
 msgid "Decouple from pitch"
@@ -4237,7 +4243,7 @@ msgstr ""
 
 #: src/speedpitch/speed-pitch.cc:250 src/speedpitch/speed-pitch.cc:258
 msgid "Multiplier:"
-msgstr ""
+msgstr "Множитель:"
 
 #: src/speedpitch/speed-pitch.cc:254
 msgid "<b>Pitch</b>"
